force-app/main/default/objects/DRC_NBC_Bank_Master__mdt/DRC_NBC_Bank_Master__mdt.object-meta.xml
<CustomObject>
    <label>Bank Master</label>
    <pluralLabel>Bank Master</pluralLabel>
</CustomObject>