force-app/main/default/objects/DRC_NBC_Bank_Master__mdt/fields/Bank_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Code__c</fullName>
    <label>Bank Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>