force-app/main/default/objects/DRC_NBC_Bank_Master__mdt/fields/DRC_Name_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>DRC_Name_Bank_Name__c</fullName>
    <label>Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>