force-app/main/default/objects/DRC_NBC_Bank_Master__mdt/fields/DRC_NBC_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Account_Number__c</fullName>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>