force-app/main/default/objects/DRC_NBC_Bank_Master__mdt/fields/DRC_NBC_Bank_Address2__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Bank_Address2__c</fullName>
    <label>Bank Address2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>