force-app/main/default/objects/DRC_NBC_Bank_Master__mdt/fields/DRC_NBC_Swift_Code__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Swift_Code__c</fullName>
    <label>Swift Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>